--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title> Taco Shop</title>
 </head>
 <body>
+    <h1><strong> CONTENTS</strong></h1>
     <table>
         <tr>
             <td> Ex1</td>
             <td> Image Mapping </td>
             <td> <a href="c:\Users\Windows-10\Desktop\4043 HTML\Ex_1 Image mapping.HTML" target="_blank">Link to Ex.1 Image mapping .html</a> </td>
         </tr>
+        <tr>
+            <td> Ex2</td>
+            <td> Cascading Style Sheets</td>
+            <td> <a href="C:\Users\Windows-10\Desktop\4043 HTML\E_2.HTML" target="_blank">Link to E_2.HTML  </a></td>
+       </tr>
     </table>
 </body>
 </html>
